--- a/template.qmd
+++ b/template.qmd
@@ -1,15 +1,24 @@
 ---
-title: "GaTech Quarto RevealJS Template"
-author: "Your Name"
+title: |
+   | Title Line 1 
+   | Title Line 2 
+subtitle: "An Example Quarto RevealJS Presentation"
+
+author:
+  - name: YOUR NAME HERE
+    affiliation: 
+      - YOUR AFFILIATION HERE
+    email: your.email@domain.com
+
 date: last-modified
-institute: Georgia Institute of Technology
+date-format: "MMMM D, YYYY"
 ---
 
 # Section 1
 
 ## Introduction
 
-*TODO* Create an example file that demonstrates the formatting and features of your format.
+*TODO* Create an example file that demonstrates the formatting and features of your format. k
 
 ## More Information
 
