--- a/template.qmd
+++ b/template.qmd
@@ -42,5 +42,5 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
 
 
-# References{visibility="hidden"}
+# References
 ## References
