--- a/references.bib
+++ b/references.bib
@@ -8,3 +8,36 @@
   pages={3803-3813},
   keywords={Quadrotors;Visual servoing;Target tracking;Time-varying systems;Optimal control;Land vehicles;Visualization;Flight control;visual servoing control;safe optimal control;reinforcement learning;quadrotor},
   doi={10.1109/TIV.2024.3464094}}
+
+@INPROCEEDINGS{SP-BL:96,
+  author={Pettersson, S. and Lennartson, B.},
+  booktitle={Proceedings of 35th IEEE Conference on Decision and Control}, 
+  title={Stability and robustness for hybrid systems}, 
+  year={1996},
+  volume={2},
+  number={},
+  pages={1202-1207 vol.2},
+  doi={10.1109/CDC.1996.572653}
+  }
+
+@ARTICLE{MSB:98,
+  author={Branicky, M. S.},
+  journal={IEEE Transactions on Automatic Control}, 
+  title={Multiple {Lyapunov} functions and other analysis tools for switched and hybrid systems}, 
+  year={1998},
+  volume={43},
+  number={4},
+  pages={475-482},
+  doi={10.1109/9.664150}
+  }
+
+@article{bauer2011runtime,
+  title={Runtime verification for LTL and TLTL},
+  author={Bauer, Andreas and Leucker, Martin and Schallhart, Christian},
+  journal={ACM Transactions on Software Engineering and Methodology (TOSEM)},
+  volume={20},
+  number={4},
+  pages={1--64},
+  year={2011},
+  publisher={ACM New York, NY, USA}
+}
