--- a/template.qmd
+++ b/template.qmd
@@ -21,6 +21,11 @@ csl: _extensions/gatech/assets/ieee.csl
 ## One
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. [See @10684122;@MSB:98 for details]. We also test footnotes.^[This is a footnote example.]
 
+Here we have another paragraph and another footnotes.^[This is another footnote example.]
+
+How about a third paragraph and a long footnotes[^longnote].
+
+[^longnote]: This is a long footnote example. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 
 ## Two
