--- a/template.qmd
+++ b/template.qmd
@@ -27,6 +27,10 @@ How about a third paragraph and a long footnotes[^longnote].
 
 [^longnote]: This is a long footnote example. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
+::: aside
+[@10684122] [https://github.com/gtfactslab/immrax](https://github.com/gtfactslab/immrax) \
+[@MSB:98] A. Harapanahalli and S. Coogan, “A linear differential inclusion for contraction analysis to known trajectories,” *IEEE TAC*, 2024.
+:::
 
 ## Two
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. [@bauer2011runtime]
