remove old lua script, fix spacing between reference number and ref in bottom of slide, add compact version of ieee csl for cleaner references

--- a/template.qmd
+++ b/template.qmd
@@ -1,7 +1,6 @@
 ---
-title: |
-   | Hello world
-   | Hello world even more
+title: "Hello world<br>Hello world even more"
+
 subtitle: "An Example Quarto RevealJS Presentation"
 
 author:
@@ -13,7 +12,7 @@ author:
 date: last-modified
 date-format: "MMMM D, YYYY"
 bibliography: references.bib
-csl: _extensions/gatech/assets/ieee.csl
+csl: _extensions/gatech/assets/ieee-compact.csl
 ---
 
 
