--- a/references.bib
+++ b/references.bib
@@ -1,7 +1,8 @@
 @ARTICLE{10684122,
   author={Yi, Xinning and Liu, Hao and Wang, Yueying and Duan, Haibin and Valavanis, Kimon P.},
-  journal={IEEE Transactions on Intelligent Vehicles}, 
-  title={Safe Reinforcement Learning-Based Visual Servoing Control for Quadrotors Tracking Unknown Ground Vehicles}, 
+  journal={IEEE Transactions on Intelligent Vehicles},
+  shortjournal={IEEE T-IV},
+  title={Safe Reinforcement Learning-Based Visual Servoing Control for Quadrotors Tracking Unknown Ground Vehicles},
   year={2025},
   volume={10},
   number={6},
@@ -22,8 +23,9 @@
 
 @ARTICLE{MSB:98,
   author={Branicky, M. S.},
-  journal={IEEE Transactions on Automatic Control}, 
-  title={Multiple {Lyapunov} functions and other analysis tools for switched and hybrid systems}, 
+  journal={IEEE Transactions on Automatic Control},
+  shortjournal={IEEE TAC},
+  title={Multiple {Lyapunov} functions and other analysis tools for switched and hybrid systems},
   year={1998},
   volume={43},
   number={4},
@@ -35,6 +37,7 @@
   title={Runtime verification for LTL and TLTL},
   author={Bauer, Andreas and Leucker, Martin and Schallhart, Christian},
   journal={ACM Transactions on Software Engineering and Methodology (TOSEM)},
+  shortjournal={ACM TOSEM},
   volume={20},
   number={4},
   pages={1--64},
