--- a/template.qmd
+++ b/template.qmd
@@ -6,6 +6,10 @@ author: Brendan Gould
 date: last-modified
 ---
 
+# Section 
+
+Test
+
 ## Introduction
 
 *TODO* Create an example file that demonstrates the formatting and features of your format.
